--- a/app/globals.css
+++ b/app/globals.css
@@ -14,4 +14,17 @@
   .flex-start {
     @apply flex justify-start items-center;
   }
+
+  .text-gradient {
+    @apply bg-gradient-to-r from-gradient-start to-gradient-end bg-clip-text text-transparent;
+  }
+
+  .bg-gradient-to-top {
+    background-image: linear-gradient(
+      to top,
+      #fdcbf1 0%,
+      #fdcbf1 1%,
+      #e6dee9 100%
+    );
+  }
 }
